gap correction

--- a/style.css
+++ b/style.css
@@ -216,7 +216,7 @@ footer {
 
     .main-section .wrapper {
         flex-direction: column-reverse;
-        row-gap: 60px;
+        gap: 60px;
         align-items: flex-start; /* 📍 Свойства для расположения элементов и отступа между ними */
     }
 
@@ -247,7 +247,7 @@ footer {
     }
 
     .main-section .wrapper {
-        row-gap: 40px; /* 📍 Отступ между изображением и блоком с текстом */
+        gap: 40px; /* 📍 Отступ между изображением и блоком с текстом */
     }
 
     .main-title {
